# Wordcraft

./: .env.example  .gitignore  Cargo.toml  README.md  REFACTORING_PLAN.md  TESTING_SUMMARY.md  test_runner.sh
src/: anki_adapter.rs  constant.rs  langchain.rs  lib.rs  main.rs  open_ai_adapter.rs  prompt.rs  test_utils.rs
tests/: anki_adapter_tests.rs  integration_tests.rs  langchain_tests.rs  mock_server.rs  mod.rs  prompt_tests.rs
