[package]
name = "autoflashcard"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
regex = "1.11.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.26", features = ["full"] }
langchain-rust = "4.6.0"
